--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -40,13 +40,14 @@
         <section class="left">
             <h1>Hi,<br>I'm <span>Charles</span></h1>
             <h4>User Interface Designer</h4>
-            <button type="submit"><a href="https://t.me/chantoz" target="_blank"> Hire Me
+            <button type="submit"><a href="https://twitter.com/c_z9ne?t=DrE2smTGo4ob0XgZBaOrvw&s=09" target="_blank"> Hire Me
             <span class="material-symbols-outlined">
                 arrow_right_alt
                 </span></a></button>
             <div class="links">
                 <ul>
-                    <li><a href=""><i class="fa fa-facebook"></i>
+                    <li><a href="https://github.com/CharlesWebdesigner"><i class="fa fa-github"></i>
+
                     </a></li>
                     <li><a href="https://twitter.com/c_z9ne?t=DrE2smTGo4ob0XgZBaOrvw&s=09" target="_blank"><i class="fa fa-twitter"></i>
                     </a></li>
@@ -67,7 +68,7 @@
         let's shake hands with me</p>
         <a href="">Download cv</a>
         </section>
-        <div class="sms"><a href="https://t.me/chantoz" target="_blank">Let's chat
+        <div class="sms"><a href="https://twitter.com/c_z9ne?t=DrE2smTGo4ob0XgZBaOrvw&s=09" target="_blank">Let's chat
             <span class="material-symbols-outlined">
                 sms
                 </span></a>
