--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -46,7 +46,7 @@
                 </span></a></button>
             <div class="links">
                 <ul>
-                    <li><a href="https://github.com/CharlesWebdesigner"><i class="fa fa-github"></i>
+                    <li><a href="https://github.com/CharlesWebdesigner" target="_blank"><i class="fa fa-github"></i>
 
                     </a></li>
                     <li><a href="https://twitter.com/c_z9ne?t=DrE2smTGo4ob0XgZBaOrvw&s=09" target="_blank"><i class="fa fa-twitter"></i>
